Registration & Login functionality completed

--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -130,7 +130,7 @@ body, html {
                     <h3 class="panel-title">Login <small>book your room now!</small></h3>
                     </div>
                     <div class="panel-body">
-                    <form role="form" action="auth" method="POST">
+                    <form role="form" action="/auth" method="POST">
 
                         <div class="form-group">
                             <input type="username" name="username" id="username" class="form-control input-sm" placeholder="Username">
@@ -160,5 +160,6 @@ body, html {
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 </body>
 </html>
