--- a/app/views/accommodation.ejs
+++ b/app/views/accommodation.ejs
@@ -214,5 +214,6 @@ body, html {
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 </body>
 </html>
