--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -41,6 +41,11 @@ body, html {
 	box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
 }
 
+.input-error{
+    position: relative;
+    padding-top: 15px;
+}
+
 /* Adds borders for tabs */
 .tab-content {
     border-left: 1px solid #ddd;
@@ -90,83 +95,166 @@ body, html {
 <body>
 <div class="container bg">
 
-<!-- Navigation Bar -->
-<div class="container-fluid">
-    <div class="row" id="home-navbar">
-    
-        <!-- Use nav-pills, nav-tabs. To center tabs add nav-justified to the class for ul -->
-        <ul class="nav nav-pills">
+    <!-- Navigation Bar -->
+    <div class="container-fluid">
+        <div class="row" id="home-navbar">
+        
+            <!-- Use nav-pills, nav-tabs. To center tabs add nav-justified to the class for ul -->
+            <ul class="nav nav-pills">
+                
+                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                <li class="text-center"><a data-toggle="tab" href="index.html">HOME</a></li>
+                </div>
+
+                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
+                <li class="text-center"><a data-toggle="tab" href="accommodation.html">ACCOMMODATION</a></li>
+                </div>
+
+                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                <li class="text-center"><a data-toggle="tab" href="#booking">BOOKING</a></li>
+                </div>
+
+                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
+                <a data-toggle="tab" href="login.html"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
+                </div>
+            </ul>
             
-            <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-            <li class="text-center"><a data-toggle="tab" href="index.html">HOME</a></li>
-            </div>
+        </div> <!-- home-navbar -->
+    </div> <!-- container-fluid // END OF TOP NAV BAR // -->
 
-            <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
-            <li class="text-center"><a data-toggle="tab" href="accommodation.html">ACCOMMODATION</a></li>
-            </div>
+    <div class="container">
+        <div class="row centered-form">
+        <div class="col-lg-4 col-md-4 col-sm-8 col-xs-12 col-sm-offset-2 col-md-offset-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                        <h3 class="panel-title">Sign up <small>book your room now!</small></h3>
+                        </div>
+                        <div class="panel-body">
+                        <form role="form" method="POST" action="/register" onsubmit=" return validation()">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12">
+                                    <div class="form-group">
+                                        <input type="text" name="username" id="username" class="form-control input-sm" placeholder="Username">
+                                    </div>
+                                    <span id="username_id" class="input-error text-danger font-weight-bold"></span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group">
+                                        <input type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="First Name">
+                                    </div>
+                                    <span id="first_name_id" class="input-error text-danger font-weight-bold"></span>
+                                </div>
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group">
+                                        <input type="text" name="last_name" id="last_name" class="form-control input-sm" placeholder="Last Name">
+                                    </div>
+                                    <span id="last_name_id" class="input-error text-danger font-weight-bold"></span>
+                                </div>
+                            </div>
 
-            <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-            <li class="text-center"><a data-toggle="tab" href="#booking">BOOKING</a></li>
-            </div>
+                            <div class="form-group">
+                                <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
+                                <span id="email_id" class="input-error text-danger font-weight-bold"></span>
+                            </div>
 
-            <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
-            <a data-toggle="tab" href="login.html"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
-            </div>
-        </ul>
-          
-    </div> <!-- home-navbar -->
-</div> <!-- container-fluid // END OF TOP NAV BAR // -->
-
-<div class="container">
-    <div class="row centered-form">
-    <div class="col-lg-4 col-md-4 col-sm-8 col-xs-12 col-sm-offset-2 col-md-offset-4">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                    <h3 class="panel-title">Sign up <small>book your room now!</small></h3>
+                            <div class="row">
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group">
+                                        <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
+                                    </div>
+                                    <span id="password_id" class="input-error text-danger font-weight-bold"></span>
+                                </div>
+                                <div class="col-xs-6 col-sm-6 col-md-6">
+                                    <div class="form-group">
+                                        <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" placeholder="Confirm Password">
+                                    </div>
+                                    <span id="password_confirmation_id" class="input-error text-danger font-weight-bold"></span>
+                                </div>
+                            </div>
+                            
+                            <input type="submit" value="Register" class="btn btn-info btn-block">
+                            <span id="password_check" class="input-error text-danger font-weight-bold"></span>
+                        </form>
                     </div>
-                    <div class="panel-body">
-                    <form role="form">
-                        <div class="row">
-                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                <div class="form-group">
-                        <input type="text" name="first_name" id="first_name" class="form-control input-sm" placeholder="First Name">
-                                </div>
-                            </div>
-                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                <div class="form-group">
-                                    <input type="text" name="last_name" id="last_name" class="form-control input-sm" placeholder="Last Name">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <input type="email" name="email" id="email" class="form-control input-sm" placeholder="Email Address">
-                        </div>
-
-                        <div class="row">
-                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                <div class="form-group">
-                                    <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
-                                </div>
-                            </div>
-                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                <div class="form-group">
-                                    <input type="password" name="password_confirmation" id="password_confirmation" class="form-control input-sm" placeholder="Confirm Password">
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <input type="submit" value="Register" class="btn btn-info btn-block">
-                    
-                    </form>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
+    <script type="text/javascript">
+        function validation(){
+            var username = document.getElementById('username').value;
+            var first_name = document.getElementById('first_name').value;
+            var last_name = document.getElementById('last_name').value;
+            var email = document.getElementById('email').value;
+            var password = document.getElementById('password').value;
+            var confirm_password = document.getElementById('password_confirmation').value;
+
+            if (username == ""){
+                document.getElementById('username_id').innerHTML = " ** Please fill the field";
+                return false;
+            }
+            if (username.length < 3){
+                document.getElementById('username_id').innerHTML = " ** Username must be at least three characters";
+                return false;
+            }
+            if (!isNaN(username)){
+                document.getElementById('username_id').innerHTML = " ** Username must contain characters";
+                return false;
+            }
+
+
+            if (first_name == ""){
+                document.getElementById('first_name_id').innerHTML = " ** Please fill the field";
+                return false;
+            }
+            if (Number.isInteger(first_name)){
+                document.getElementById('first_name_id').innerHTML = " ** Invalid first name";
+                return false;
+            }
+            if (last_name == ""){
+                document.getElementById('last_name_id').innerHTML = " ** Please fill the field";
+                return false;
+            }
+            if (Number.isInteger(first_name)){
+                document.getElementById('last_name_id').innerHTML = " ** Invalid last name";
+                return false;
+            }
+
+
+            if (email == ""){
+                document.getElementById('email_id').innerHTML = " ** Please fill the field";
+                return false;
+            }
+            if (email.indexOf('@') <= 0){
+                document.getElementById('email_id').innerHTML = " ** Email is not in proper format";
+                return false;
+            }
+
+
+            if (password == ""){
+                document.getElementById('password_id').innerHTML = " ** Please fill the field";
+                return false;
+            }
+            if (password.length < 5){
+                document.getElementById('password_id').innerHTML = " ** Password must be at least five characters";
+                return false;
+            }
+            if (confirm_password == ""){
+                document.getElementById('password_confirmation_id').innerHTML = " ** Please fill the field";
+                return false;
+            }
+            if (password != confirm_password){
+                document.getElementById('password_check').innerHTML = " ** Passwords do not match";
+                return false;
+            }
+        }
+    </script>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
 </body>
 </html>
