--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -10,6 +10,7 @@
 <meta name="viewport" content="width = device-width, initial-scale = 1">
 <title>Hotel Management System - Home</title>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link href="../node_modules/sweetalert2/dist/sweetalert2.css" rel="stylesheet">
 
 <style>
 body, html {
@@ -95,71 +96,71 @@ body, html {
 <body>
 <div class="container bg">
 
-<!-- Navigation Bar -->
-<div class="container-fluid">
-    <div class="row" id="home-navbar">
-    
-        <!-- Use nav-pills, nav-tabs. To center tabs add nav-justified to the class for ul -->
-        <ul class="nav nav-pills">
+    <!-- Navigation Bar -->
+    <div class="container-fluid">
+        <div class="row" id="home-navbar">
+        
+            <!-- Use nav-pills, nav-tabs. To center tabs add nav-justified to the class for ul -->
+            <ul class="nav nav-pills">
+                
+                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                <li class="text-center"><a data-toggle="tab" href="index.html">HOME</a></li>
+                </div>
+
+                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
+                <li class="text-center"><a data-toggle="tab" href="accommodation.html">ACCOMMODATION</a></li>
+                </div>
+
+                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                <li class="text-center"><a data-toggle="tab" href="#booking">BOOKING</a></li>
+                </div>
+
+                <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
+                <a data-toggle="tab" href="login.html"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
+                </div>
+            </ul>
             
-            <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-            <li class="text-center"><a data-toggle="tab" href="index.html">HOME</a></li>
-            </div>
+        </div> <!-- home-navbar -->
+    </div> <!-- container-fluid // END OF TOP NAV BAR // -->
 
-            <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
-            <li class="text-center"><a data-toggle="tab" href="accommodation.html">ACCOMMODATION</a></li>
-            </div>
-
-            <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-            <li class="text-center"><a data-toggle="tab" href="#booking">BOOKING</a></li>
-            </div>
-
-            <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
-            <a data-toggle="tab" href="login.html"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
-            </div>
-        </ul>
-          
-    </div> <!-- home-navbar -->
-</div> <!-- container-fluid // END OF TOP NAV BAR // -->
-
-<div class="container">
-    <div class="row centered-form">
-    <div class="col-lg-4 col-md-4 col-sm-8 col-xs-12 col-sm-offset-2 col-md-offset-4">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                    <h3 class="panel-title">Login <small>book your room now!</small></h3>
-                    </div>
-                    <div class="panel-body">
-                    <form role="form" action="/auth" method="POST">
-
-                        <div class="form-group">
-                            <input type="username" name="username" id="username" class="form-control input-sm" placeholder="Username">
+    <div class="container">
+        <div class="row centered-form">
+        <div class="col-lg-4 col-md-4 col-sm-8 col-xs-12 col-sm-offset-2 col-md-offset-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                        <h3 class="panel-title">Login <small>book your room now!</small></h3>
                         </div>
+                        <div class="panel-body">
+                        <form role="form" action="/auth" method="POST">
 
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-12 col-md-12">
-                                <div class="form-group">
-                                    <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
+                            <div class="form-group">
+                                <input type="username" name="username" id="username" class="form-control input-sm" placeholder="Username">
+                            </div>
+
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12">
+                                    <div class="form-group">
+                                        <input type="password" name="password" id="password" class="form-control input-sm" placeholder="Password">
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        
-                        <input type="submit" value="Login" class="btn btn-info btn-block">
+                            
+                            <input type="submit" value="Login" class="btn btn-info btn-block">
 
-                        <div class="row">
-                            <div class="text-center" id="link-registernow"><a href="register.html">You don't have an account yet? Register NOW.</a></div>
-                        </div>
-                    
-                    </form>
+                            <div class="row">
+                                <div class="text-center" id="link-registernow"><a href="register.html">You don't have an account yet? Register NOW.</a></div>
+                            </div>
+                        
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+<script src="../node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
