--- a/app/views/accommodation.ejs
+++ b/app/views/accommodation.ejs
@@ -124,11 +124,11 @@ body, html {
 <ul class="nav nav-pills">
     
     <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-        <li class="text-center"><a data-toggle="tab" href="index.html">HOME</a></li>
+        <li class="text-center"><a data-toggle="tab" href="/">HOME</a></li>
     </div>
 
     <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
-        <li class="active text-center"><a data-toggle="tab" href="accommodation.html">ACCOMMODATION</a></li>
+        <li class="active text-center"><a data-toggle="tab" href="accommodation">ACCOMMODATION</a></li>
     </div>
 
     <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
@@ -136,7 +136,7 @@ body, html {
     </div>
 
     <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
-        <a data-toggle="tab" href="login.html"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
+        <a data-toggle="tab" href="logins"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
     </div>
 </ul>
       
