--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -104,11 +104,11 @@ body, html {
             <ul class="nav nav-pills">
                 
                 <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-                <li class="text-center"><a data-toggle="tab" href="index.html">HOME</a></li>
+                <li class="text-center"><a data-toggle="tab" href="/">HOME</a></li>
                 </div>
 
                 <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
-                <li class="text-center"><a data-toggle="tab" href="accommodation.html">ACCOMMODATION</a></li>
+                <li class="text-center"><a data-toggle="tab" href="accommodations">ACCOMMODATION</a></li>
                 </div>
 
                 <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
@@ -116,7 +116,7 @@ body, html {
                 </div>
 
                 <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
-                <a data-toggle="tab" href="login.html"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
+                <a data-toggle="tab" href="logins"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
                 </div>
             </ul>
             
@@ -148,7 +148,7 @@ body, html {
                             <input type="submit" value="Login" class="btn btn-info btn-block">
 
                             <div class="row">
-                                <div class="text-center" id="link-registernow"><a href="register.html">You don't have an account yet? Register NOW.</a></div>
+                                <div class="text-center" id="link-registernow"><a href="registration">You don't have an account yet? Register NOW.</a></div>
                             </div>
                         
                         </form>
