--- a/app/views/accommodation.ejs
+++ b/app/views/accommodation.ejs
@@ -116,104 +116,104 @@ body, html {
 <body>
 <div class="container bg">
 
-<!-- Navigation Bar -->
-<div class="container-fluid">
-<div class="row" id="home-navbar">
+    <!-- Navigation Bar -->
+    <div class="container-fluid">
+        <div class="row" id="home-navbar">
 
-<!-- Use nav-pills, nav-tabs. To center tabs add nav-justified to the class for ul -->
-<ul class="nav nav-pills">
-    
-    <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-        <li class="text-center"><a data-toggle="tab" href="/">HOME</a></li>
-    </div>
+        <!-- Use nav-pills, nav-tabs. To center tabs add nav-justified to the class for ul -->
+        <ul class="nav nav-pills">
+            
+            <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                <li class="text-center"><a data-toggle="tab" href="/">HOME</a></li>
+            </div>
 
-    <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
-        <li class="active text-center"><a data-toggle="tab" href="accommodation">ACCOMMODATION</a></li>
-    </div>
+            <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
+                <li class="active text-center"><a data-toggle="tab" href="accommodation">ACCOMMODATION</a></li>
+            </div>
 
-    <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-        <li class="text-center"><a data-toggle="tab" href="#booking">BOOKING</a></li>
-    </div>
+            <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                <li class="text-center"><a data-toggle="tab" href="#booking">BOOKING</a></li>
+            </div>
 
-    <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
-        <a data-toggle="tab" href="logins"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
-    </div>
-</ul>
-      
-</div> <!-- home-navbar -->
-</div> <!-- container-fluid // END OF TOP NAV BAR // -->
+            <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
+                <a data-toggle="tab" href="logins"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
+            </div>
+        </ul>
+            
+        </div> <!-- home-navbar -->
+        </div> <!-- container-fluid // END OF TOP NAV BAR // -->
 
-<!--  Accommodation page contents  -->
-<div class="container-fluid">
-<div class="row">
+        <!--  Accommodation page contents  -->
+        <div class="container-fluid">
+        <div class="row">
 
-<!--  Check availability part  -->
-<div class="col-lg-4 col-md-4 col-sm-8 col-xs-8" id ="check-availability">
-    <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div>
-        <p class="text-center col-lg-4 col-md-4 col-sm-4 col-xs-4">
-            Check-in:
-        </p>
-        <div class="form-group col-lg-4 col-md-4 col-sm-4 col-xs-4">
-            <div class='input-group date' id='datetimepicker1'>
-                <input type='text' class="form-control" />
-                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
-                </span>
+        <!--  Check availability part  -->
+        <div class="col-lg-4 col-md-4 col-sm-8 col-xs-8" id ="check-availability">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div>
+                <p class="text-center col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    Check-in:
+                </p>
+                <div class="form-group col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class='input-group date' id='datetimepicker1'>
+                        <input type='text' class="form-control" />
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div>
+                <p class="text-center col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    Check-out:
+                </p>
+                <div class="form-group col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class='input-group date' id='datetimepicker1'>
+                        <input type='text' class="form-control" />
+                        <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <p class="text-right">
+                    <div class="form-group row">
+                        <select class="form-control pull-right" id="dropdown-adult">
+                            <option>Adults</option>
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                        </select>
+                    </div>
+                </p>
+            </div>
+            <div class="row">
+                <p class="text-right">
+                    <div class="form-group row">
+                        <select class="form-control pull-right" id="dropdown-children">
+                            <option>Children</option>
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                        </select>
+                    </div>
+                </p>
+            </div>
+            <div class="row">
+                <p>
+                    <button type="submit" class = "btn btn-warning btn-md pull-right" id="btn-checkavailability">Check Availability</button>
+                </p>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div>
-        <p class="text-center col-lg-4 col-md-4 col-sm-4 col-xs-4">
-            Check-out:
-        </p>
-        <div class="form-group col-lg-4 col-md-4 col-sm-4 col-xs-4">
-            <div class='input-group date' id='datetimepicker1'>
-                <input type='text' class="form-control" />
-                <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
-                </span>
-            </div>
+
         </div>
     </div>
-    <div class="row">
-        <p class="text-right">
-            <div class="form-group row">
-                <select class="form-control pull-right" id="dropdown-adult">
-                    <option>Adults</option>
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                </select>
-            </div>
-        </p>
-    </div>
-    <div class="row">
-        <p class="text-right">
-            <div class="form-group row">
-                <select class="form-control pull-right" id="dropdown-children">
-                    <option>Children</option>
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                </select>
-            </div>
-        </p>
-    </div>
-    <div class="row">
-        <p>
-            <button type="submit" class = "btn btn-warning btn-md pull-right" id="btn-checkavailability">Check Availability</button>
-        </p>
-    </div>
-</div>
 
 </div>
-</div>
-
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/d3js/5.12.0/d3.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
 <script src="../node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
