--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -101,46 +101,46 @@ body, html {
 <body>
 <div class="container bg">
 
-<!-- Navigation Bar -->
-<div class="container-fluid">
-<div class="row" id="home-navbar">
+    <!-- Navigation Bar -->
+    <div class="container-fluid">
+    <div class="row" id="home-navbar">
 
-<!-- Use nav-pills, nav-tabs. To center tabs add nav-justified to the class for ul -->
-<ul class="nav nav-pills">
-    
-    <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-        <li class="active text-center"><a data-toggle="tab" href="/">HOME</a></li>
+    <!-- Use nav-pills, nav-tabs. To center tabs add nav-justified to the class for ul -->
+    <ul class="nav nav-pills">
+        
+        <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
+            <li class="active text-center"><a data-toggle="tab" href="/">HOME</a></li>
+        </div>
+
+        <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
+            <li class="text-center"><a data-toggle="tab" href="accommodations">ACCOMMODATION</a></li>
+        </div>
+
+        <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
+            <li class="text-center"><a data-toggle="tab" href="#booking">BOOKING</a></li>
+        </div>
+
+        <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
+            <a data-toggle="tab" href="logins"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
+        </div>
+    </ul>
+        
+    </div> <!-- home-navbar -->
+    </div> <!-- container-fluid // END OF TOP NAV BAR // -->
+
+    <div class="container-fluid">
+        <p><h4 id="header-label">LUXURIOUS EXPERIENCE</h4></p>
     </div>
 
-    <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
-        <li class="text-center"><a data-toggle="tab" href="accommodations">ACCOMMODATION</a></li>
+    <div class="container-fluid">
+        <p id="viewrooms-btn">
+        <a href="#" class="btn btn-primary btn-lg">View Rooms <span class="glyphicon glyphicon-lamp"></span></a>
+        </p>
     </div>
 
-    <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-        <li class="text-center"><a data-toggle="tab" href="#booking">BOOKING</a></li>
-    </div>
-
-    <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
-        <a data-toggle="tab" href="logins"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
-    </div>
-</ul>
-      
-</div> <!-- home-navbar -->
-</div> <!-- container-fluid // END OF TOP NAV BAR // -->
-
-<div class="container-fluid">
-    <p><h4 id="header-label">LUXURIOUS EXPERIENCE</h4></p>
 </div>
-
-<div class="container-fluid">
-    <p id="viewrooms-btn">
-    <a href="#" class="btn btn-primary btn-lg">View Rooms <span class="glyphicon glyphicon-lamp"></span></a>
-    </p>
-</div>
-
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/d3js/5.12.0/d3.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
 <script src="../node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
