--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -253,8 +253,8 @@ body, html {
         }
     </script>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/d3js/5.12.0/d3.min.js"></script>
+<script src="./js/bootstrap.min.js"></script>
 <script src="../node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
