--- a/app/views/accommodation.ejs
+++ b/app/views/accommodation.ejs
@@ -214,6 +214,6 @@ body, html {
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.12.0/d3.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
-<script src="../node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.28.2/sweetalert2.all.min.js"></script>
 </body>
 </html>
