--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -146,7 +146,7 @@ body, html {
                             </div>
                             
                             <input type="submit" value="Login" class="btn btn-info btn-block">
-
+                            
                             <div class="row">
                                 <div class="text-center" id="link-registernow"><a href="registration">You don't have an account yet? Register NOW.</a></div>
                             </div>
@@ -159,8 +159,9 @@ body, html {
     </div>
 
 </div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.12.0/d3.min.js"></script>
 <script src="./js/bootstrap.min.js"></script>
-<script src="../node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.28.2/sweetalert2.all.min.js"></script>
 </body>
 </html>
