MVC architecture modified: right structure

--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -8,7 +8,7 @@
 
 <!-- Set the page to the width of the device and set the zoon level -->
 <meta name="viewport" content="width = device-width, initial-scale = 1">
-<title>Hotel Management System - Home</title>
+<title>Hotel Management System - Login</title>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link href="../node_modules/sweetalert2/dist/sweetalert2.css" rel="stylesheet">
 
@@ -108,7 +108,7 @@ body, html {
                 </div>
 
                 <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
-                <li class="text-center"><a data-toggle="tab" href="accommodations">ACCOMMODATION</a></li>
+                <li class="text-center"><a data-toggle="tab" href="../rooms/accommodation">ACCOMMODATION</a></li>
                 </div>
 
                 <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
@@ -116,7 +116,7 @@ body, html {
                 </div>
 
                 <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
-                <a data-toggle="tab" href="logins"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
+                <a data-toggle="tab" href="login"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
                 </div>
             </ul>
             
@@ -148,7 +148,7 @@ body, html {
                             <input type="submit" value="Login" class="btn btn-info btn-block">
                             
                             <div class="row">
-                                <div class="text-center" id="link-registernow"><a href="registration">You don't have an account yet? Register NOW.</a></div>
+                                <div class="text-center" id="link-registernow"><a href="register">You don't have an account yet? Register NOW.</a></div>
                             </div>
                         
                         </form>
