--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -8,7 +8,7 @@
 
 <!-- Set the page to the width of the device and set the zoon level -->
 <meta name="viewport" content="width = device-width, initial-scale = 1">
-<title>Hotel Management System - Home</title>
+<title>Hotel Management System - Register</title>
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 <style>
@@ -107,7 +107,7 @@ body, html {
                 </div>
 
                 <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
-                <li class="text-center"><a data-toggle="tab" href="accommodations">ACCOMMODATION</a></li>
+                <li class="text-center"><a data-toggle="tab" href="../rooms/accommodation">ACCOMMODATION</a></li>
                 </div>
 
                 <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
@@ -115,7 +115,7 @@ body, html {
                 </div>
 
                 <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
-                <a data-toggle="tab" href="logins"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
+                <a data-toggle="tab" href="login"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
                 </div>
             </ul>
             
