--- a/app/views/accommodation.ejs
+++ b/app/views/accommodation.ejs
@@ -136,7 +136,7 @@ body, html {
             </div>
 
             <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
-                <a data-toggle="tab" href="logins"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
+                <a data-toggle="tab" href="../users/login"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
             </div>
         </ul>
             
