--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -113,7 +113,7 @@ body, html {
         </div>
 
         <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
-            <li class="text-center"><a data-toggle="tab" href="accommodations">ACCOMMODATION</a></li>
+            <li class="text-center"><a data-toggle="tab" href="rooms/accommodation">ACCOMMODATION</a></li>
         </div>
 
         <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
@@ -121,7 +121,7 @@ body, html {
         </div>
 
         <div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-2">
-            <a data-toggle="tab" href="logins"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
+            <a data-toggle="tab" href="users/login"><button type="submit" class="btn btn-danger" role="button" id="login-btn">LOGIN</button></a>
         </div>
     </ul>
         
