--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -131,7 +131,7 @@ body, html {
                         <h3 class="panel-title">Login <small>book your room now!</small></h3>
                         </div>
                         <div class="panel-body">
-                        <form role="form" action="/auth" method="POST">
+                        <form role="form" action="/users/login" method="POST">
 
                             <div class="form-group">
                                 <input type="username" name="username" id="username" class="form-control input-sm" placeholder="Username">
