--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -131,6 +131,7 @@ body, html {
                         <h3 class="panel-title">Login <small>book your room now!</small></h3>
                         </div>
                         <div class="panel-body">
+                        <% include ./partials/messages %>
                         <form role="form" action="/users/login" method="POST">
 
                             <div class="form-group">
